Updated and formatted latex doc

--- a/latex_docu/01/doc.tex
+++ b/latex_docu/01/doc.tex
@@ -1,88 +1,32 @@
-\section{Introduction}\label{introduction}
+\section{Introduction}\label{sec:introduction}
 
 \textbf{Authorship}
+\vspace*{4mm}
 
-\begin{longtable}[]{@{}llll@{}}
+\begin{longtable}{@{}llll@{}}
 \toprule
-\begin{minipage}[b]{0.10\columnwidth}\raggedright\strut
-Version\strut
-\end{minipage} & \begin{minipage}[b]{0.06\columnwidth}\raggedright\strut
-Date\strut
-\end{minipage} & \begin{minipage}[b]{0.15\columnwidth}\raggedright\strut
-Modified by\strut
-\end{minipage} & \begin{minipage}[b]{0.23\columnwidth}\raggedright\strut
-Summary of changes\strut
-\end{minipage}\tabularnewline
+Version & Date & Modified by & Summary of changes \\
 \midrule
 \endhead
-\begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-0.1.0\strut
-\end{minipage} & \begin{minipage}[t]{0.06\columnwidth}\raggedright\strut
-2017-07-19\strut
-\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright\strut
-Oliver, Andres\strut
-\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-Outline \& working draft\strut
-\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-0.1.1\strut
-\end{minipage} & \begin{minipage}[t]{0.06\columnwidth}\raggedright\strut
-2017-07-20\strut
-\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright\strut
-Paul\strut
-\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-Motivation section first draft\strut
-\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-0.2.0\strut
-\end{minipage} & \begin{minipage}[t]{0.06\columnwidth}\raggedright\strut
-2017-07-22\strut
-\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright\strut
-Oliver, Andres\strut
-\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-Motivation rewrite \& flesh out Requirements section\strut
-\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-0.2.1\strut
-\end{minipage} & \begin{minipage}[t]{0.06\columnwidth}\raggedright\strut
-2017-07-29\strut
-\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright\strut
-Oliver, Andres\strut
-\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-Fixes for Markdown-\textgreater{} LaTeX conversion\strut
-\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-0.2.2\strut
-\end{minipage} & \begin{minipage}[t]{0.06\columnwidth}\raggedright\strut
-2017-07-29\strut
-\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright\strut
-Oliver\strut
-\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-Removing content about Organization (moved to new document)\strut
-\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
-0.3.0\strut
-\end{minipage} & \begin{minipage}[t]{0.06\columnwidth}\raggedright\strut
-2017-07-30\strut
-\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright\strut
-Oliver, Andres\strut
-\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
-Cleanup before hand-in\strut
-\end{minipage}\tabularnewline
+0.1.0 & 2017-07-19 & Oliver, Andres & Outline \& working draft \\
+0.1.1 & 2017-07-20 & Paul & Motivation section first draft \\
+0.2.0 & 2017-07-22 & Oliver, Andres & Motivation rewrite \& flesh out \\
+			&						 &								& Requirements section \\
+0.2.1 & 2017-07-29 & Oliver, Andres & Fixes for Markdown -- LaTeX conversion \\
+0.2.2 & 2017-07-29 & Oliver & Moved Organization content\\
+0.3.0 & 2017-07-30 & Oliver, Andres & Cleanup before hand-in \\
 \bottomrule
 \end{longtable}
-
-\subsection{Summary/Overview/Abstract}\label{summaryoverviewabstract}
 
 \subsection{What is Open Data}\label{what-is-open-data}
 
 So what do we mean when we talk about ``open data''?
 
-\begin{quote}
+\begin{quotation}
 Open means anyone can freely access, use, modify, and share for any
 purpose (subject, at most, to requirements that preserve provenance and
 openness). http://opendefinition.org/
-\end{quote}
+\end{quotation}
 
 Further, the definition encompasses the following aspects:
 
@@ -103,7 +47,7 @@ Further, the definition encompasses the following aspects:
   and redistribute - there should be no discrimination against fields of
   endeavour or against persons or groups. For example, `non-commercial'
   restrictions that would prevent `commercial' use, or restrictions of
-  use for certain purposes (e.g.~only in education), are not allowed.
+  use for certain purposes (e.g.~only in education), are not allowed.\\
   http://opendatahandbook.org/guide/en/what-is-open-data/
 \end{itemize}
 \end{quote}
