--- a/latex_docu/05a/doc.tex
+++ b/latex_docu/05a/doc.tex
@@ -1,6 +1,8 @@
-\section{Units of Measurement}\label{units-of-measurement}
+\section{Units of Measurement}\label{sec:units}
 
-\textbf{Authorship} Written by Andres
+\textbf{Authorship} Written by Andres Ardila\\
+
+\vspace*{4mm}
 
 Since the same physical quantity can be represented in different units
 of measurement (both meters and miles represent lengths, for example),
