--- a/latex_docu/06/doc.tex
+++ b/latex_docu/06/doc.tex
@@ -1,5 +1,4 @@
-\section{Inserting into
-Elasticsearch}\label{inserting-into-elasticsearch}
+\section{Inserting into Elasticsearch}\label{sec:inserting}
 
 \textbf{Authoriship}
 
